--- a/res/src/ng-modules/chayka-forms.less
+++ b/res/src/ng-modules/chayka-forms.less
@@ -4,7 +4,7 @@
     margin-bottom: 1ex;
     position: relative;
 
-    > label{
+    & > label{
         cursor: auto;
         display: block;
         width: @label-width;
@@ -20,22 +20,23 @@
         box-sizing: border-box;
 
     }
-    > label.alignright{
+    & > label.alignright{
         text-align: right;
         padding-right: 1em;
     }
-    > .input{
+    & > .input{
         margin-left: @label-width;
         display: block;
 
-        input[type=text],
-        input[type=password],
-        input[type=number],
-        input[type=email],
-        input[type=search],
-        input[type=tel],
-        input[type=url],
-        select, textarea{
+        & > input[type=text],
+        & > input[type=password],
+        & > input[type=number],
+        & > input[type=email],
+        & > input[type=search],
+        & > input[type=tel],
+        & > input[type=url],
+        & > select,
+        & > textarea{
             margin: 0;
             font-size: 16px;
             min-height: 32px;
@@ -45,16 +46,16 @@
             box-sizing: border-box;
         }
 
-        textarea{
+        & > textarea{
             resize: vertical;
             line-height: normal;
         }
 
-        input[type=radio]{
+        & > input[type=radio]{
 
         }
 
-        input[type=checkbox]{
+        & > input[type=checkbox]{
 
         }
 
@@ -64,12 +65,12 @@
     }
 
     &.radio{
-        label{
+        & > label{
             white-space: nowrap;
         }
-        .input{
+        & > .input{
             padding-top: 1px;
-            label{
+            & > label{
                 display: inline-block;
                 margin-right: 1ex;
             }
@@ -84,18 +85,18 @@
     }
 
     &.progress > .input{
-        input[type=text],
-        input[type=password],
-        input[type=number],
-        input[type=email],
-        input[type=search],
-        input[type=tel],
-        input[type=url],
-        textarea{
+        & > input[type=text],
+        & > input[type=password],
+        & > input[type=number],
+        & > input[type=email],
+        & > input[type=search],
+        & > input[type=tel],
+        & > input[type=url],
+        & > textarea{
             background: url(../img/spinner32x32.gif) no-repeat 99% 50%;
             background-size: 16px 16px;
         }
-        textarea{
+        & > textarea{
             background-position: 99% 4px;
         }
     }
@@ -111,159 +112,159 @@
     }
 
 
-    > .width05{
+    & > .width05{
         width: 5%;
     }
 
-    > .width10{
+    & > .width10{
         width: 10%;
     }
 
-    > .width15{
+    & > .width15{
         width: 15%;
     }
 
-    > .width20{
+    & > .width20{
         width: 20%;
     }
 
-    > .width25{
+    & > .width25{
         width: 25%;
     }
 
-    > .width30{
+    & > .width30{
         width: 30%;
     }
 
-    > .width35{
+    & > .width35{
         width: 35%;
     }
 
-    > .width40{
+    & > .width40{
         width: 40%;
     }
 
-    > .width45{
+    & > .width45{
         width: 45%;
     }
 
-    > .width50{
+    & > .width50{
         width: 50%;
     }
 
-    > .width55{
+    & > .width55{
         width: 55%;
     }
 
-    > .width60{
+    & > .width60{
         width: 60%;
     }
 
-    > .width65{
+    & > .width65{
         width: 65%;
     }
 
-    > .width70{
+    & > .width70{
         width: 70%;
     }
 
-    > .width75{
+    & > .width75{
         width: 75%;
     }
 
-    > .width80{
+    & > .width80{
         width: 80%;
     }
 
-    > .width85{
+    & > .width85{
         width: 85%;
     }
 
-    > .width90{
+    & > .width90{
         width: 90%;
     }
 
-    > .width95{
+    & > .width95{
         width: 95%;
     }
 
-    > .width100{
+    & > .width100{
         width: 100%;
     }
 
-    > label.width05 + .input{
+    & > label.width05 + .input{
         margin-left: 5%;
     }
 
-    > label.width10 + .input{
+    & > label.width10 + .input{
         margin-left: 10%;
     }
 
-    > label.width15 + .input{
+    & > label.width15 + .input{
         margin-left: 15%;
     }
 
-    > label.width20 + .input{
+    & > label.width20 + .input{
         margin-left: 20%;
     }
 
-    > label.width25 + .input{
+    & > label.width25 + .input{
         margin-left: 25%;
     }
 
-    > label.width30 + .input{
+    & > label.width30 + .input{
         margin-left: 30%;
     }
 
-    > label.width35 + .input{
+    & > label.width35 + .input{
         margin-left: 35%;
     }
 
-    > label.width40 + .input{
+    & > label.width40 + .input{
         margin-left: 40%;
     }
 
-    > label.width45 + .input{
+    & > label.width45 + .input{
         margin-left: 45%;
     }
 
-    > label.width50 + .input{
+    & > label.width50 + .input{
         margin-left: 50%;
     }
 
-    > label.width55 + .input{
+    & > label.width55 + .input{
         margin-left: 55%;
     }
 
-    > label.width60 + .input{
+    & > label.width60 + .input{
         margin-left: 60%;
     }
 
-    > label.width65 + .input{
+    & > label.width65 + .input{
         margin-left: 65%;
     }
 
-    > label.width70 + .input{
+    & > label.width70 + .input{
         margin-left: 70%;
     }
 
-    > label.width75 + .input{
+    & > label.width75 + .input{
         margin-left: 75%;
     }
 
-    > label.width80 + .input{
+    & > label.width80 + .input{
         margin-left: 80%;
     }
 
-    > label.width85 + .input{
+    & > label.width85 + .input{
         margin-left: 85%;
     }
 
-    > label.width90 + .input{
+    & > label.width90 + .input{
         margin-left: 90%;
     }
 
-    > label.width95 + .input{
+    & > label.width95 + .input{
         margin-left: 95%;
     }
 
@@ -282,7 +283,7 @@
 }
 
 .form_field.fullsize{
-    > label{
+    & > label{
         display: block;
         width: 100%;
         position: static;
@@ -290,34 +291,35 @@
 //        line-height: normal;
 //        min-height: 0;
     }
-    .input{
+    & > .input{
         margin: 0;
         width: 100%;
-        input[type=text],
-        input[type=password],
-        input[type=number],
-        input[type=email],
-        input[type=search],
-        input[type=tel],
-        input[type=url],
-        select,
-        textarea{
+        & > input[type=text],
+        & > input[type=password],
+        & > input[type=number],
+        & > input[type=email],
+        & > input[type=search],
+        & > input[type=tel],
+        & > input[type=url],
+        & > select,
+        & > textarea{
             width: 100%;
         }
     }
 }
 
 .form_field.stretch{
-    .input{
+    & > .input{
 
-        input[type=text],
-        input[type=password],
-        input[type=number],
-        input[type=email],
-        input[type=search],
-        input[type=tel],
-        input[type=url],
-        select, textarea{
+        & > input[type=text],
+        & > input[type=password],
+        & > input[type=number],
+        & > input[type=email],
+        & > input[type=search],
+        & > input[type=tel],
+        & > input[type=url],
+        & > select,
+        & > textarea{
             width: 100%;
         }
     }
