--- a/res/src/ng-modules/chayka-wp-admin.less
+++ b/res/src/ng-modules/chayka-wp-admin.less
@@ -278,27 +278,27 @@ body, html{
 #normal-sortables, #advanced-sortables{
     .form_field{
         margin-bottom: 1em;
-        > label{
+        & > label{
             padding-top: 4px;
         }
-        > .input{
+        & > .input{
             display: block;
 
-            input[type=text],
-            input[type=password],
-            select{
+            & > input[type=text],
+            & > input[type=password],
+            & > select{
 
             }
-            textarea{
+            & > textarea{
 
             }
-            input[type=radio]{
+            & > input[type=radio]{
 
             }
-            input[type=checkbox]{
+            & > input[type=checkbox]{
 
             }
-            label[for]{
+            & > label[for]{
 
             }
         }
