--- a/res/src/ng-modules/chayka-forms.less
+++ b/res/src/ng-modules/chayka-forms.less
@@ -83,6 +83,17 @@
             display: none;
         }
     }
+    &.checkboxes{
+        & > label{
+            white-space: nowrap;
+            display: inline-block;
+            width: auto;
+            position: static;
+            & > input[type=checkbox]{
+
+            }
+        }
+    }
 
     &.progress > .input{
         & > input[type=text],
