refactored form validator

--- a/res/src.es6.less/ng-modules/chayka-forms.less
+++ b/res/src.es6.less/ng-modules/chayka-forms.less
@@ -95,7 +95,7 @@
         }
     }
 
-    &.progress > .input{
+    & > .input.progress{
         & > input[type=text],
         & > input[type=password],
         & > input[type=number],
