--- a/res/src.es6.less/ng-modules/chayka-modals.less
+++ b/res/src.es6.less/ng-modules/chayka-modals.less
@@ -36,6 +36,7 @@
                 position: relative;
                 border-bottom: 1px solid #eeeeee;
                 text-align: left;
+                min-height: 30px;
                 & > .modal_header-title{
                     margin-left: 40px;
                     margin-right: 40px;
