--- a/res/src/ng-modules/chayka-modals.css
+++ b/res/src/ng-modules/chayka-modals.css
@@ -31,6 +31,7 @@
   position: relative;
   border-bottom: 1px solid #eeeeee;
   text-align: left;
+  min-height: 30px;
 }
 .chayka-modals > .chayka-modals-fader > .chayka-modals-modal > .modal_header > .modal_header-title {
   margin-left: 40px;
