Working on update service

--- a/app/views/admin/index.phtml
+++ b/app/views/admin/index.phtml
@@ -26,6 +26,10 @@
 	        <div class="form_field stretch color_picker" data-form-field="themeBaseColor">
 		        <label class="width50">Theme base color</label><input type="color" data-ng-init="options.themeBaseColor='#000000'" data-ng-model="options.themeBaseColor" data-default-color="#000000" data-color-picker title="Theme base color"/>
 	        </div>
+            <div class="form_field fullsize update_server_url" data-form-field="updateServerUrl">
+                <label class="">Update Server URL</label><input type="text" data-ng-init="options.updateServerUrl=''" data-ng-model="options.updateServerUrl" title="Update Server URL"/>
+            </div>
+
 
 	        <!-- chayka: fields -->
             <div class="buttons">
