--- a/res/src/ng-modules/chayka-options-form.css
+++ b/res/src/ng-modules/chayka-options-form.css
@@ -2,10 +2,12 @@
 [form-validator] {
   width: 300px;
 }
-.buttons {
+.buttons,
+.options_form-buttons {
   text-align: right;
   margin: 30px 0;
 }
-.buttons button {
+.buttons button,
+.options_form-buttons button {
   margin: 1em 0 1em 1em;
 }
