--- a/res/src/ng-modules/chayka-wp-admin.less
+++ b/res/src/ng-modules/chayka-wp-admin.less
@@ -489,3 +489,20 @@ body, html{
         width: auto;
     }
 }
+
+
+/* console pages */
+.chayka-options_form{
+    [data-form-validator], [form-validator]{
+        width: 300px;
+    }
+
+    .buttons, .options_form-buttons{
+        text-align: right;
+        margin: 30px 0;
+
+        button{
+            margin: 1em 0 1em 1em;
+        }
+    }
+}
