--- a/res/src/ng-modules/chayka-wp-admin.less
+++ b/res/src/ng-modules/chayka-wp-admin.less
@@ -497,7 +497,7 @@ body, html{
         width: 300px;
     }
 
-    .buttons, .options_form-buttons{
+    .options_form-buttons{
         text-align: right;
         margin: 30px 0;
 
