Minor fix with OptionsController & OptionHelper

--- a/app/views/admin/index.phtml
+++ b/app/views/admin/index.phtml
@@ -46,7 +46,7 @@
         <label class="width50">Minimize Media</label><select data-ng-init="options.MinimizeMedia='1'; minOptions = {'0': 'No', '1': 'Yes'}" data-ng-options="key as value for (key, value) in minOptions" data-ng-model="options.MinimizeMedia" title="Minimize Media"></select>
     </div>
     <div class="form_field fullsize update_server_url" data-form-field="updateServerUrl">
-        <label class="">Update Server URL</label><input type="text" data-ng-init="options.updateServerUrl=''" data-ng-model="options.updateServerUrl" title="Update Server URL"/>
+        <label class="">Update Server URL</label><input type="text" data-ng-init="options._updateServerUrl=''" data-ng-model="options._updateServerUrl" title="Update Server URL"/>
     </div>
     <!-- chayka: fields -->
 </div>
