--- a/app/views/email/template.phtml
+++ b/app/views/email/template.phtml
@@ -3,6 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style type="text/css">
+        body{
+            margin: 30px;
+        }
         a {
             color: #336699;
         }
@@ -109,7 +112,7 @@
         }
     </style>
 </head>
-<body marginheight="0" topmargin="0" marginwidth="0" leftmargin="0">
+<body>
 <!--content-->
 </body>
 </html>
