--- a/app/views/admin/email.phtml
+++ b/app/views/admin/email.phtml
@@ -1,31 +1,39 @@
 <h2>Email Settings</h2>
 <div data-console-page-options="options" data-namespace="Chayka.WP" data-ng-init="options={};" data-ng-cloak>
-    <div class="form_field fullsize" data-form-field="notification_email" data-check-email="Should be a valid email">
-        <label>Notifications email</label><input type="text" data-ng-init="options._notification_email=''" data-ng-model="options._notification_email" title="Notifications email"/>
+    <div class="form_field fullsize checkbox advanced_phpmailer_setup_enabled" data-form-field="advancedPhpMailerSetupEnabled">
+        <label>
+            <input type="checkbox" data-ng-init="options.advancedPhpMailerSetupEnabled=''" data-ng-model="options.advancedPhpMailerSetupEnabled" data-ng-true-value="'1'" data-ng-false-value="''" title="Advanced PHPMailer setup enabled"/>
+            Advanced PHPMailer setup enabled
+        </label>
     </div>
-    <div class="form_field fullsize" data-form-field="mail_from" data-check-email="Should be a valid email">
-        <label>From (email)</label><input type="text" data-ng-init="options._mail_from=''" data-ng-model="options._mail_from" title="From (email)"/>
-    </div>
-    <div class="form_field fullsize" data-form-field="mail_from_name">
-        <label>From (name)</label><input type="text" data-ng-init="options._mail_from_name=''" data-ng-model="options._mail_from_name" title="From (name)"/>
-    </div>
-    <div class="form_field stretch" data-form-field="smtp_host">
-        <label>SMTP Host</label><input type="text" data-ng-init="options._smtp_host=''" data-ng-model="options._smtp_host" title="SMTP Host"/>
-    </div>
-    <div class="form_field stretch" data-form-field="smtp_port">
-        <label>SMTP Port</label><input type="text" data-ng-init="options._smtp_port=''" data-ng-model="options._smtp_port" title="SMTP Port"/>
-    </div>
-    <div class="form_field stretch" data-form-field="smtp_ssl">
-        <label>SMTP SSL</label><select data-ng-init="options._smtp_ssl='none'; sslOptions = ['none', 'tsl', 'ssl']" data-ng-options="opt for opt in sslOptions" data-ng-model="options._smtp_ssl" title="SMTP SSL"></select>
-    </div>
-    <div class="form_field stretch" data-form-field="smtp_auth">
-        <label>SMTP Auth</label><select data-ng-init="options._smtp_auth='0'; authOptions = {'0': 'No', '1': 'Yes'}" data-ng-options="key as value for (key, value) in authOptions" data-ng-model="options._smtp_auth" title="SMTP Auth"></select>
-    </div>
-    <div class="form_field stretch" data-form-field="smtp_user">
-        <label>SMTP User</label><input type="text" data-ng-init="options._smtp_user=''" data-ng-model="options._smtp_user" title="SMTP User"/>
-    </div>
-    <div class="form_field stretch" data-form-field="smtp_pass">
-        <label>SMTP Pass</label><input type="text" data-ng-init="options._smtp_pass=''" data-ng-model="options._smtp_pass" title="SMTP Pass"/>
+    <div data-ng-show="!!options.advancedPhpMailerSetupEnabled">
+        <div class="form_field fullsize" data-form-field="notification_email" data-check-email="Should be a valid email">
+            <label>Notifications email</label><input type="text" data-ng-init="options._notification_email=''" data-ng-model="options._notification_email" title="Notifications email"/>
+        </div>
+        <div class="form_field fullsize" data-form-field="mail_from" data-check-email="Should be a valid email">
+            <label>From (email)</label><input type="text" data-ng-init="options._mail_from=''" data-ng-model="options._mail_from" title="From (email)"/>
+        </div>
+        <div class="form_field fullsize" data-form-field="mail_from_name">
+            <label>From (name)</label><input type="text" data-ng-init="options._mail_from_name=''" data-ng-model="options._mail_from_name" title="From (name)"/>
+        </div>
+        <div class="form_field stretch" data-form-field="smtp_host">
+            <label>SMTP Host</label><input type="text" data-ng-init="options._smtp_host=''" data-ng-model="options._smtp_host" title="SMTP Host"/>
+        </div>
+        <div class="form_field stretch" data-form-field="smtp_port">
+            <label>SMTP Port</label><input type="text" data-ng-init="options._smtp_port=''" data-ng-model="options._smtp_port" title="SMTP Port"/>
+        </div>
+        <div class="form_field stretch" data-form-field="smtp_ssl">
+            <label>SMTP SSL</label><select data-ng-init="options._smtp_ssl='none'; sslOptions = ['none', 'tsl', 'ssl']" data-ng-options="opt for opt in sslOptions" data-ng-model="options._smtp_ssl" title="SMTP SSL"></select>
+        </div>
+        <div class="form_field stretch" data-form-field="smtp_auth">
+            <label>SMTP Auth</label><select data-ng-init="options._smtp_auth='0'; authOptions = {'0': 'No', '1': 'Yes'}" data-ng-options="key as value for (key, value) in authOptions" data-ng-model="options._smtp_auth" title="SMTP Auth"></select>
+        </div>
+        <div class="form_field stretch" data-form-field="smtp_user">
+            <label>SMTP User</label><input type="text" data-ng-init="options._smtp_user=''" data-ng-model="options._smtp_user" title="SMTP User"/>
+        </div>
+        <div class="form_field stretch" data-form-field="smtp_pass">
+            <label>SMTP Pass</label><input type="text" data-ng-init="options._smtp_pass=''" data-ng-model="options._smtp_pass" title="SMTP Pass"/>
+        </div>
     </div>
     <!-- chayka: fields -->
 </div>
